Fix contact-us (on home page) alignment on mobile.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1199,14 +1199,14 @@ a {
       left: 0;
       .contact-header {
         padding: 23px 0 19px 0;
+        margin-left: 0;
+        text-align: center;
         background: rgba(255, 255, 255, 0.8);
         font-size: 52px;
-        margin-left: $left-align-home-mobile;
       }
       .contact-body {
         padding: 0;
         font-size: .95em;
-        padding-left: 12px;
         > ul {
           padding-left: 0;
         }
